# Fast_Pathtracer

./: .gitignore  CMakeLists.txt  README.md
Python/: metrics_1733709064.csv  metrics_1733713776.csv  metrics_1733787345.csv  metrics_1733792271.csv  metrics_1733792443.csv  nb.ipynb
Python/S1/: S1_C1_GRID_540_64S_20d_heatmap_statistics.txt  S1_C1_OCT_540_64s_20d_heatmap_statistics.txt  S1_C1_SAH_BVH_540-64s-20d_heatmap_statistics.txt  S1_C1_mid_BVH_540p-64s-20d_heatmap_statistics.txt  S1_C2_SAH_BVH_360-64s-20d.csv  S1_C2_SAH_BVH_360-64s-20d_heatmap_statistics.txt  S1_C2_mid_BVH_360-64s-20d.csv  S1_C2_mid_BVH_360-64s-20d.ppm  S1_C2_mid_BVH_360-64s-20d_heatmap_statistics.txt  S1_C2_oct_360-64s-20d_heatmap_statistics.txt  S1_c2_gird-360-64s-20d.csv  S1_c2_gird-360-64s-20d.ppm  S1_c2_gird-360-64s-20d_heatmap_statistics.txt  acceleration_structures_comparison.xlsx  memory.xlsx
Python/S2/: S2 bvh mid_heatmap_statistics.txt  S2 gird.csv  S2 gird_heatmap_statistics.txt  s2 oct_heatmap_statistics.txt
Python/S3/: s3 grid.csv  s3 grid_heatmap_statistics.txt  s3 mid.csv  s3 mid_heatmap_statistics.txt  s3 oct.csv  s3 oct_heatmap_statistics.txt  s3 sah .csv  s3 sah _heatmap_statistics.txt
src/TheNextWeek/: aabb.h  bvh.h  camera.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  main.cc  quad.h  ray.h  sphere.h  triangle.h
